# TinyLlama

./: .gitignore  pyproject.toml
lit_gpt/: packed_dataset.py
pretrain/: tinyllama.py
